# genmodel-DCGAN

./: .gitignore  LICENSE  README.md  autoencoder-t2.ipynb  autoencoder.ipynb  autoencoder.py  conda_env.yml  dataload.py  dcgan.py  gan.ipynb  gan_architecture.py  launch_training.py  model.py  models.py  pyproject.toml  pytorch-mnist-GAN.ipynb  report.ipynb  run_dcgan.py  test_regularization.ipynb  train_dcgan.py  utils.py
notebooks/: gan.ipynb  report.ipynb
src/: dataload.py  gan_architecture.py  lightning_model.py  pl_gan.py  train_dcgan.py  train_dcgan_2.py
