[tool.poetry]
name = "genmodel-dcgan"
version = "0.1.0"
description = ""
authors = ["Arthur Viens <arthur.viens@minesparis.psl.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.4"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
scikit-image = "^0.19.2"
tqdm = "^4.64.0"
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
pytorch-lightning = "^1.6.3"

[tool.poetry.dev-dependencies]
poethepoet = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
cuda113 = "python -m pip install torch==1.10.0+cu113 torchvision==0.11.0+cu113 -f https://download.pytorch.org/whl/torch_stable.html"
